--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -8,7 +8,7 @@
 
   <div class="right-buttons">
     
-    <div *ngIf="mostrarElementoA; else otroElemento">
+    <!-- <div *ngIf="mostrarElementoA; else otroElemento">
       <button mat-icon-button (click)="Online()" >
         <mat-icon class="Online">wifi</mat-icon>
       </button>
@@ -18,7 +18,7 @@
       <button mat-icon-button (click)="Offline()" >
         <mat-icon class="Offline">wifi_off</mat-icon>
       </button>
-    </ng-template>
+    </ng-template> -->
 
     <button mat-icon-button *ngIf="isAdmin()" routerLink="./verConfiguracion">
       <mat-icon>settings</mat-icon>
