--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -68,8 +68,8 @@
         </mat-card-content>
     </mat-card>
 
-    <div>
+    <!--<div>
     <button (click)="sync()">Iniciar Sincronización</button>
     </div> 
-    </div>
+    </div>-->
 </div>
