--- a/src/app/modules/inventarios/inventarios.component.html
+++ b/src/app/modules/inventarios/inventarios.component.html
@@ -4,7 +4,7 @@
       <div class="spinner-text">Cargando...</div>
   </div>
 </div>
-<div *ngIf="!isLoading">
+<div>
   <div style="margin-top: 60px;">
     <div class="container mt-4">
       <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
