--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -75,7 +75,7 @@
                  </ng-container>
                  <ng-container matColumnDef="acciones" *ngIf="isRecep()">
                    <th mat-header-cell *matHeaderCellDef> Acciones </th>
-                   <td mat-cell *matCellDef="let producto">d
+                   <td mat-cell *matCellDef="let producto">
                      <ng-container >
                       <mat-icon color="warn">block</mat-icon>
                      </ng-container>
