--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -4,7 +4,7 @@
       <div class="spinner-text">Cargando...</div>
   </div>
 </div>
-<div>
+<div *ngIf="!isLoading">
   <div style="margin-top: 60px;">
     <div class="container mt-4">
       <h2 class="mb-3">LISTA DE COLABORADORES</h2>
