--- a/src/app/modules/productos-vendidos/productos-vendidos.component.html
+++ b/src/app/modules/productos-vendidos/productos-vendidos.component.html
@@ -80,7 +80,7 @@
                <tr mat-row *matRowDef="let productofila; columns: displayedColumns"></tr>
             </table>
          </div>
-         <mat-paginator #paginatorProductos [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
+         <mat-paginator [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
       </div>
     </div>
 </div>
