--- a/src/app/modules/inventarios/inventarios.component.html
+++ b/src/app/modules/inventarios/inventarios.component.html
@@ -1,9 +1,9 @@
-<div class="custom-spinner-container" *ngIf="isLoading">
+<!-- <div class="custom-spinner-container" *ngIf="isLoading">
   <div class="custom-spinner">
       <div class="spinner-circle"></div>
       <div class="spinner-text">Cargando...</div>
   </div>
-</div>
+</div> -->
 <div >
   <div style="margin-top: 60px;">
     <div class="container mt-4">
