--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -77,6 +77,11 @@
       </div>
     </div> 
   </div>
+
+  <div>
+    <br>
+    <button (click)="Sincronizar()">Sincronizar</button>
+  </div>
 </div>
 
 
