se agrego lo del cache

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -68,4 +68,10 @@
         </mat-card-content>
     </mat-card>
     </div>
+
+    <div>
+        <br>
+        <button (click)="Sincronizar()">Sincronizar</button>
+    </div>
 </div>
+
