--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -52,9 +52,9 @@
             <td mat-cell *matCellDef="let prod">
   
               <ng-container *ngIf="column === 'Nombre'">
-              {{ prod.Nombre }}
+                {{ prod.Nombre ? prod.Nombre : prod.nombre }}
               </ng-container>
-                      
+                                    
               <ng-container *ngIf="column === 'Membresia'">
               {{ prod.Membresia }}
               </ng-container>
