--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -68,10 +68,9 @@
         </mat-card-content>
     </mat-card>
     </div>
-
-    <div>
+   <!--<div>
         <br>
         <button (click)="Sincronizar()">Sincronizar</button>
-    </div>
+    </div>-->
 </div>
 
