--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -9,9 +9,8 @@
     <div class="container mt-4">
       <h2 class="mb-3">LISTA DE COLABORADORES</h2>
       <div style="text-align: right; margin-bottom: 50px;">
-        <button mat-raised-button (click)="OpenAgregar()" style="background-color: #fd9727; font-size: 16px;"><mat-icon>add</mat-icon>AGREGAR COLABORADOR</button>  <!--routerLink="../alta-colaborador"-->
-        </div>
-    
+        <button mat-raised-button [disabled]="!habilitarBoton" (click)="OpenAgregar()" style="background-color: #fd9727; font-size: 16px;"><mat-icon>add</mat-icon>AGREGAR COLABORADOR</button>  <!--routerLink="../alta-colaborador"-->
+      </div>
       <div class="mb-3">
           <mat-form-field class="example-full-width">
               <mat-label>Nombre de colaborador</mat-label>
@@ -46,42 +45,31 @@
               <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Estatus</th>
               <td mat-cell *matCellDef="let item; let i = index">
                   <div class="toggle-container">
-                      <!-- Usar item.idBodega en lugar de empleados.id_empleado -->
                       <input type="checkbox" id="toggle{{item.id_empleado}}{{i}}" class="toggle-checkbox" [checked]="item.estatus == 1" (change)="onToggle($event, item.id_empleado, item.correoEmpleado)">
                       <label for="toggle{{item.id_empleado}}{{i}}" class="toggle-label"></label>
                   </div>
               </td>
-          </ng-container>
-          
-          
+            </ng-container>
             <ng-container matColumnDef="acciones">
               <th mat-header-cell *matHeaderCellDef> Acciones </th>
               <td mat-cell *matCellDef="let empleado">
-                <button mat-icon-button color="primary" (click)="OpenEditar(empleado)">
+                <button mat-icon-button color="primary" (click)="OpenEditar(empleado)" [disabled]="!habilitarBoton">
                   <mat-icon>edit</mat-icon>
                 </button>
               </td>
             </ng-container>
-          
             <tr mat-header-row *matHeaderRowDef="['nombre', 'email', 'telefono','activar', 'acciones']"></tr>
             <tr mat-row *matRowDef="let row; columns: ['nombre', 'email', 'telefono', 'activar','acciones'];"></tr>
           </table>
-          
-          </div>
-    
-          <mat-paginator
-          [pageSizeOptions]="[5, 10, 15, 20]"
-          showFirstLastButtons
-        ></mat-paginator>
-    
+        </div>
+        <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
       </div>
     </div> 
   </div>
-
-  <div>
+ <!-- <div>
     <br>
     <button (click)="Sincronizar()">Sincronizar</button>
-  </div>
+  </div>-->
 </div>
 
 
