--- a/src/app/modules/entradas/entradas.component.html
+++ b/src/app/modules/entradas/entradas.component.html
@@ -129,7 +129,7 @@
                </P>
             </div>
             <div class="col-sm-2">
-               <button type="button" mat-raised-button (click)="agregarATabla()" style="margin-top: 10px;background-color: #fde49c; width: 100%; height: 35px;">
+               <button type="button" mat-raised-button (click)="agregarATabla()" style="margin-top: 10px;background-color: #fde49c; width: 100%; height: 35px;" [disabled]="!habilitarBoton">
                   <mat-icon>add</mat-icon>
                   Agregar
                </button>
@@ -160,7 +160,7 @@
          </form>
       </div>
       <div style="display: flex; justify-content: center;" >
-         <button mat-raised-button (click)="registrar()" style="background-color: #fd9727;font-size: 20px;"
+         <button mat-raised-button (click)="registrar()" style="background-color: #fd9727;font-size: 20px;" [disabled]="!habilitarBoton"
          >
          Guardar
          </button>
