--- a/src/app/modules/membresias-lista/membresias.component.html
+++ b/src/app/modules/membresias-lista/membresias.component.html
@@ -9,7 +9,7 @@
       <div class="container mt-4" >
       <h2 class="mb-3">MEMBRESIAS DISPONIBLES</h2>
       <div style="text-align: right;">
-         <button mat-raised-button style="background-color: #fd9727; font-size: 16px;" (click)="openDialog()">
+         <button mat-raised-button [disabled]="!habilitarBoton" style="background-color: #fd9727; font-size: 16px;" (click)="openDialog()">
             <mat-icon>add</mat-icon>
             AGREGAR MEMBRESIA
          </button>
@@ -57,7 +57,7 @@
                <th mat-header-cell *matHeaderCellDef>Acciones</th>
                <td mat-cell *matCellDef="let item">
                   <!--<button mat-icon-button color="primary" routerLink="../../admin/editarMembresias/{{item.idMem}}">-->
-                  <button mat-icon-button color="primary" (click)="openDialogEdit(item.idMem, item.tipo_membresia)">
+                  <button mat-icon-button color="primary" [disabled]="!habilitarBoton" (click)="openDialogEdit(item.idMem, item.tipo_membresia)">
                      <mat-icon>edit</mat-icon>
                   </button>
                </td>
