--- a/src/app/modules/servicios-lista/servicios-lista.component.html
+++ b/src/app/modules/servicios-lista/servicios-lista.component.html
@@ -10,7 +10,7 @@
       <div class="container mt-4">
       <h2 class="mb-3">SERVICIOS DISPONIBLES</h2>
       <div style="text-align: right;">
-         <button mat-raised-button style="background-color: #fd9727; font-size: 16px;" (click)="openDialog()">
+         <button [disabled]="!habilitarBoton" mat-raised-button style="background-color: #fd9727; font-size: 16px;" (click)="openDialog()">
             <mat-icon>add</mat-icon>
             AGREGAR SERVICIO
          </button>
@@ -44,7 +44,7 @@
             <ng-container matColumnDef="actions">
                <th mat-header-cell *matHeaderCellDef>Acciones</th>
                <td mat-cell *matCellDef="let item">
-                  <button mat-icon-button color="primary" (click)="editarServicio(item.id_servicios_individuales)">
+                  <button mat-icon-button color="primary" [disabled]="!habilitarBoton" (click)="editarServicio(item.id_servicios_individuales)">
                      <mat-icon>edit</mat-icon>
                   </button>
                </td>
