--- a/src/app/modules/reports/reports.component.html
+++ b/src/app/modules/reports/reports.component.html
@@ -4,7 +4,7 @@
         <div class="spinner-text">Cargando...</div>
     </div>
 </div>
-<div>
+<div *ngIf="!isLoading">
     <div style="margin-top: 60px;">
     <div class="container mt-4">
         <div class="row">
