--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -78,13 +78,13 @@
               </ng-container>
 
               <ng-container *ngIf="column === 'Pago'">
-                <button mat-icon-button (click)="abrirEmergente(prod)" color="primary">  <!--(click)="abrirEmergente(updMem)"-->
+                <button mat-icon-button [disabled]="!habilitarBoton" (click)="abrirEmergente(prod)" color="primary">  <!--(click)="abrirEmergente(updMem)"-->
                   <mat-icon class="icon-size">edit</mat-icon>
                 </button>
               </ng-container>
 
               <ng-container *ngIf="column === 'Info Cliente'">
-                <button mat-icon-button (click)="abrirInfoCliente(prod)" color="{{ prod.foto ? 'primary' : 'warn' }}">  <!--(click)="abrirEmergente(updMem)"-->
+                <button mat-icon-button [disabled]="!habilitarBoton" (click)="abrirInfoCliente(prod)" color="{{ prod.foto ? 'primary' : 'warn' }}">  <!--(click)="abrirEmergente(updMem)"-->
                   <mat-icon class="icon-size">info</mat-icon>
                 </button>
               </ng-container>
