--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -45,7 +45,7 @@
               <th mat-header-cell style="margin: 0;" *matHeaderCellDef>Estatus</th>
               <td mat-cell *matCellDef="let item; let i = index">
                   <div class="toggle-container">
-                      <input type="checkbox" id="toggle{{item.id_empleado}}{{i}}" class="toggle-checkbox" [checked]="item.estatus == 1" (change)="onToggle($event, item.id_empleado, item.correoEmpleado)">
+                      <input type="checkbox" id="toggle{{item.id_empleado}}{{i}}" class="toggle-checkbox" [checked]="item.estatus == 1" [disabled]="!habilitarBoton" (change)="onToggle($event, item.id_empleado, item.correoEmpleado)">
                       <label for="toggle{{item.id_empleado}}{{i}}" class="toggle-label"></label>
                   </div>
               </td>
