--- a/src/app/modules/inventarios/inventarios.component.html
+++ b/src/app/modules/inventarios/inventarios.component.html
@@ -12,7 +12,7 @@
       
         <div style="text-align: right; margin-bottom: 20px;">
           <button
-              mat-raised-button
+              mat-raised-button [disabled]="!habilitarBoton"
               (click)="abrirHistorial()"
               style="background-color: #fd9727; font-size: 16px;">
               <mat-icon>assignment</mat-icon>Historial de inventario global
