--- a/src/app/modules/ver-configuracion/ver-configuracion.component.html
+++ b/src/app/modules/ver-configuracion/ver-configuracion.component.html
@@ -33,6 +33,14 @@
                 <strong style="margin-right: 35px; ">DIRECCIÓN:</strong> {{ gimnasio.direccion }}
              </li>
           </div>
+         <br>
+          <div class="card">
+            <li style="font-size: 18px;">
+               <img src="../../../../../assets/img/correo.png" width="40px" alt="Icono correo" style="margin-right: 20px;margin-left: 20px; ">
+               <strong style="margin-right: 70px; ">Correo:</strong> {{ gimnasio.correoEmpleado }}
+            </li>
+         </div>
+
           <br>
        </ul>
     </div>
