--- a/src/app/modules/alta-colaboradores/alta-colaboradores.component.html
+++ b/src/app/modules/alta-colaboradores/alta-colaboradores.component.html
@@ -36,7 +36,7 @@
                   <mat-form-field appearance="outline" style="width: 95%;">
                      <mat-label>Puesto</mat-label>
                      <mat-select id="puesto" formControlName="puesto" id="puesto" [errorStateMatcher]="matcher">
-                        <mat-option value="Administrador">Administrador</mat-option>
+                       <!-- <mat-option value="Administrador">Administrador</mat-option>-->
                         <mat-option value="Recepcionista">Recepcionista</mat-option>
                      </mat-select>
                      <mat-error *ngIf="form.get('area')?.hasError('required')">
