--- a/src/app/modules/productos/productos.component.html
+++ b/src/app/modules/productos/productos.component.html
@@ -31,8 +31,10 @@
          <div  class="table-container">
                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                   <ng-container matColumnDef="nombre">
-                     <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                     <td mat-cell *matCellDef="let producto"> {{ producto.nombreProducto }} </td>
+                     <th mat-header-cell *matHeaderCellDef> Producto </th>
+                     <td mat-cell *matCellDef="let producto"> 
+                        {{ producto.nombreProducto }}, {{ producto.marca }} - {{ producto.detalleCompra }} 
+                      </td>                 
                   </ng-container>
     
                   <ng-container matColumnDef="existencia">
