--- a/src/app/modules/servicios-lista/servicios-lista.component.html
+++ b/src/app/modules/servicios-lista/servicios-lista.component.html
@@ -49,6 +49,15 @@
                   </button>
                </td>
             </ng-container>
+            <ng-container matColumnDef="eliminar">
+               <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+               <td mat-cell *matCellDef="let item">
+                  <button mat-icon-button color="warn" [disabled]="!habilitarBoton" (click)="borrarSucursal(item.id_servicios_individuales)">
+                     <mat-icon>delete</mat-icon>
+                  </button>
+               </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let item; columns: displayedColumns; let i = index"></tr>
          </table>
