--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -21,7 +21,7 @@
                             </div>
                             <div class="col-sm-7">
                                 <br>
-                                <p style="color: rgb(0, 0, 0); font-size: 45px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidad }}</p>
+                                <p style="color: rgb(0, 0, 0); font-size: 30px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidad }}</p>
                             </div>
                         </div>
                     </mat-card-content>
@@ -31,12 +31,7 @@
     </mat-card>
 
     <mat-card *ngIf="isAdmin() || isRecep()">
-        <mat-card-content>
-            <div class="dashboard-cardss">
-                <mat-card>
-                    <mat-card-content>
-                        <div class="dashboard-cardss" *ngIf="isAdmin() || isRecep()">
-                            <mat-card class="ancho-1">
+
                                 <mat-card-header>
                                     <h3 class="icon-title">
                                         <mat-icon class="icon">grid_view</mat-icon>
@@ -48,8 +43,8 @@
                                     <div *ngIf="tablaHTML" [innerHTML]="tablaHTML "></div>
 
                                 </mat-card-content>
-                            </mat-card>
-                            <mat-card class="ancho-2">
+                       
+                           <!-- <mat-card class="ancho-2">
                                 <mat-card-header>
                                     <h3 class="icon-title">
                                         <mat-icon class="icon">grid_view</mat-icon>
@@ -60,12 +55,42 @@
                                     <p style="border-top: 2px solid orange;"></p>
                                     <div *ngIf="tablaHTMLVentas" [innerHTML]="tablaHTMLVentas"></div>
                                 </mat-card-content>
-                            </mat-card>
-                        </div>
-                    </mat-card-content>
-                </mat-card>
-            </div>
+                            </mat-card>-->
+
+
+    </mat-card>
+
+    <mat-card *ngIf="isAdmin() || isRecep()">
+        <mat-card-header>
+            <h3 class="icon-title">
+                <mat-icon class="icon">people</mat-icon>
+                LISTA DE ASISTENCIA
+            </h3>
+        </mat-card-header>
+        <mat-card-content>
+            <p style="border-top: 2px solid orange;"></p>
         </mat-card-content>
+       
+        <div  class="table-container">
+            <table mat-table [dataSource]="dataSource" >
+            <ng-container matColumnDef="title">
+                <th mat-header-cell *matHeaderCellDef>Nombre</th>
+                <td mat-cell *matCellDef="let item">{{ item.nombre }}</td>
+            </ng-container>
+            <ng-container matColumnDef="details">
+                <th mat-header-cell *matHeaderCellDef>Hora de entrada</th>
+                <td mat-cell *matCellDef="let item">{{ item.fechaHoraEntrada }}</td>
+            </ng-container>
+            <ng-container matColumnDef="price">
+                <th mat-header-cell *matHeaderCellDef>Membresia</th>
+                <td mat-cell *matCellDef="let item">{{ item.membresia }}</td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let item; columns: displayedColumns; let i = index"></tr>
+            </table>
+            <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20, 30,40,50,100,200,300,4000]" showFirstLastButtons></mat-paginator>
+        </div>
+
     </mat-card>
     </div>
    <!--<div>
