--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -37,7 +37,7 @@
           </button>
           <mat-menu #menu="matMenu">
             <button mat-menu-item (click)="descargarExcel()">.xlsx <mat-icon>grid_on</mat-icon></button>
-            <button mat-menu-item (click)="descargarPDF()">.pdf <mat-icon>picture_as_pdf</mat-icon></button>
+           <!---- <button mat-menu-item (click)="descargarPDF()">.pdf <mat-icon>picture_as_pdf</mat-icon></button>--->
           </mat-menu>
         </div>   
       </div>
