--- a/src/app/modules/ventas/ventas.component.html
+++ b/src/app/modules/ventas/ventas.component.html
@@ -23,26 +23,30 @@
          <div class="table-container">
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-               <th mat-header-cell *matHeaderCellDef>{{ column | titlecase }}</th>
-               <td mat-cell *matCellDef="let prod">
-                  {{ prod[columnMapping[column]] }}
-                  <ng-container *ngIf="column !== 'cantidad'">
-                     {{ prod[column] }}
-                  </ng-container>
-                  <ng-container *ngIf="column === 'cantidad'">
-                        <input matInput [(ngModel)]="prod.cantidad" type="number" min="0" class="custom-input custom-mat-form-field" (keyup.enter)="validarYAgregarProducto(prod)" />
-                  </ng-container>
-                  <ng-container *ngIf="column === 'acciones'">
+                 <th mat-header-cell *matHeaderCellDef>{{ column | titlecase }}</th>
+                 <td mat-cell *matCellDef="let prod">
+                   <ng-container *ngIf="column === 'Nombre del Producto'">
+                     {{ prod.nombreProducto }} {{ prod.marca }}
+                   </ng-container>
+                   <ng-container *ngIf="column !== 'Nombre del Producto' && column !== 'cantidad' && column !== 'acciones'">
+                     {{ prod[columnMapping[column]] }}
+                   </ng-container>
+                   <ng-container *ngIf="column === 'cantidad'">
+                     <input matInput [(ngModel)]="prod.cantidad" type="number" min="0" class="custom-input custom-mat-form-field" (keyup.enter)="validarYAgregarProducto(prod)" />
+                   </ng-container>
+                   <ng-container *ngIf="column === 'acciones'">
                      <button (click)="validarYAgregarProducto(prod)" style="background-color: #000000; color: #ffffff; border: none; padding: 10px; height: 40px; border-radius: 5px; cursor: pointer; display: flex; align-items: center;">
-                        Agregar
-                        <mat-icon class="add-box-icon" style="margin-left: 5px; font-size: 18px;">add_box</mat-icon>
+                       Agregar
+                       <mat-icon class="add-box-icon" style="margin-left: 5px; font-size: 18px;">add_box</mat-icon>
                      </button>
-                  </ng-container>
-               </td>
+                   </ng-container>
+                 </td>
                </ng-container>
                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                <tr mat-row *matRowDef="let productofila; columns: displayedColumns"></tr>
-            </table>
+             </table>
+             
+
             <mat-paginator #paginator [pageSizeOptions]="[3, 10, 20, 30,40,50,100,200,300,4000]" showFirstLastButtons></mat-paginator>
          </div>
          <div class="resumen">
