--- a/src/app/modules/home/home.component.css
+++ b/src/app/modules/home/home.component.css
@@ -1,14 +1,22 @@
 /* dashboard.component.css */
-.dashboard-cards {
-    display: flex;
-    flex-direction: row;
-   
-  }
+  .dashboard-cards {
+      display: flex;
+      flex-direction: row;
+    
+    }
 
   .dashboard-cardss {
-    display: flex;
+  display: flex;
   flex-wrap: wrap;
   }
+
+
+  .dashboard-cards2 {
+  display: flex;
+  flex-wrap: row;
+  height: 200px;
+  }
+  
   
   .orange-card {
     background-color: #ffffff; 
