--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -30,6 +30,32 @@
         </mat-card-content>
     </mat-card>
 
+
+    <mat-card *ngIf="isAdmin() || isRecep()">
+        <mat-card-content>
+            <div class="dashboard-cards2">
+                <mat-card class="orange-card" *ngFor="let card of homeCard2">
+                    <mat-card-header>
+                        <mat-card-title>{{card.titulo}}</mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <br>
+                        <div class="row">
+                            <div class="col-sm-5">
+                                <img src="https://olympus.arvispace.com/gimnasioRoles/assets/img/{{card.icono}}" alt="icnono" class="card-image" style="width: 40%;" >
+                            </div>
+                            <div class="col-sm-7">
+                                <br>
+                                <p style="color: rgb(0, 0, 0); font-size: 22px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidad }}</p>
+                                <p style="color: rgb(0, 0, 0); font-size: 22px; font-family:Verdana, Geneva, Tahoma, sans-serif; ">{{ card.cantidadM }}</p>
+                            </div>
+                        </div>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+        </mat-card-content>
+    </mat-card>
+
     <mat-card *ngIf="isAdmin() || isRecep()">
 
                                 <mat-card-header>
@@ -84,6 +110,10 @@
             <ng-container matColumnDef="price">
                 <th mat-header-cell *matHeaderCellDef>Membresia</th>
                 <td mat-cell *matCellDef="let item">{{ item.membresia }}</td>
+            </ng-container>
+            <ng-container matColumnDef="rol">
+                <th mat-header-cell *matHeaderCellDef>Rol</th>
+                <td mat-cell *matCellDef="let item">{{ item.rol }}</td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let item; columns: displayedColumns; let i = index"></tr>
