--- a/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
+++ b/src/app/modules/lista-membresias-pago-efec/lista-membresias-pago-efec.component.html
@@ -50,6 +50,10 @@
           <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumnsActivos">
             <th mat-header-cell *matHeaderCellDef >{{ column }}</th>
             <td mat-cell *matCellDef="let prod">
+
+              <ng-container *ngIf="column === 'ID'">
+                {{ prod.ID }}
+              </ng-container>
   
               <ng-container *ngIf="column === 'Nombre'">
                 {{ prod.Nombre ? prod.Nombre : prod.nombre }}
@@ -103,7 +107,18 @@
                     <label class="estatus-inactivo">Huella no registrada</label>
                   </div>
                 </ng-template>
-              </ng-container>                
+              </ng-container>  
+
+
+              <ng-container *ngIf="column === 'Rol'">
+                <span *ngIf="prod.rol === 'Cliente'; else notCliente">
+                  <mat-icon>block</mat-icon>
+                </span>
+                <ng-template #notCliente>
+                  <mat-icon (click)="eliminarUs(prod)">delete</mat-icon>
+                </ng-template>
+              </ng-container>
+              
            </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumnsActivos"></tr>
